fix: upgrade image cropper

--- a/src/app/shared/components/image-cropper/image-cropper.component.scss
+++ b/src/app/shared/components/image-cropper/image-cropper.component.scss
@@ -10,17 +10,20 @@
     width: 100%;
     position:fixed;
     background-color: black;
-    opacity: 0.95;
+    opacity: 1;
     width:100vw;
 }
 
 
 .title-wrapper {
-    margin:0 auto;
-    width:fit-content;
+    width:100%;
     color: $background-gray;
+    display: flex;
+    align-items: center;
+    align-content: center;
     .title {
         margin-top: 16px;
+        margin: 0 auto;
     }
 }
 
@@ -28,10 +31,10 @@
     margin:0 auto;
     background-color: black;
     max-width:800px;
-        height:100%;
+        height:100vh;
         display: grid;
         align-content: center;
-        grid-template-rows: 1fr auto 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
     .cropper-inner {
         width:100%;
         image-cropper {
